--- a/src/app/face-snap/face-snap.component.html
+++ b/src/app/face-snap/face-snap.component.html
@@ -1,13 +1,13 @@
 <div class="face-snap-card">
-  <h2>{{ title }}</h2>
-  <p>Mis en ligne le {{ createdDate }}</p>
-  <img [src]="imageUrl" [alt]="title" />
-  <p>{{ description }}</p>
+  <h2>{{ faceSnap.title }}</h2>
+  <p>Mis en ligne le {{ faceSnap.createdDate }}</p>
+  <img [src]="faceSnap.imageUrl" [alt]="faceSnap.title" />
+  <p>{{ faceSnap.description }}</p>
 
   <p *ngIf="!alreadySnapped; else elseBlock">
-    🤌 <button (click)="onAddSnap()">AddSnap</button> {{ snaps }}
+    🤌 <button (click)="onAddSnap()">AddSnap</button> {{ faceSnap.snaps }}
   </p>
   <ng-template #elseBlock>
-    <p>🤌 <button (click)="onAddSnap()">RemovSnap</button> {{ snaps }}</p>
+    <p>🤌 <button (click)="onAddSnap()">RemovSnap</button> {{ faceSnap.snaps }}</p>
   </ng-template>
 </div>
