--- a/src/app/face-snap/face-snap.component.html
+++ b/src/app/face-snap/face-snap.component.html
@@ -4,6 +4,7 @@
   <img [src]="faceSnap.imageUrl" [alt]="faceSnap.title" />
   <p>{{ faceSnap.description }}</p>
 
+  <p *ngIf="faceSnap.location">Photo prise à {{faceSnap.location}}!</p>
   <p *ngIf="!alreadySnapped; else elseBlock">
     🤌 <button (click)="onAddSnap()">AddSnap</button> {{ faceSnap.snaps }}
   </p>
