--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
-<app-face-snap *ngIf="mySnap1.location=='Parsis'" [faceSnap]="mySnap1"></app-face-snap>
-<app-face-snap [faceSnap]="mySnap2"></app-face-snap>
-<app-face-snap [faceSnap]="mySnap3"></app-face-snap>
+<!-- <app-face-snap *ngIf="mySnap1.location=='Parsis'" [faceSnap]="mySnap1"></app-face-snap> -->
+
+<app-face-snap *ngFor="let faceSnapEl of mySnaps" [faceSnap]="faceSnapEl"></app-face-snap>
+<!-- <app-face-snap [faceSnap]="mySnap3"></app-face-snap> -->
