--- a/src/app/face-snap/face-snap.component.html
+++ b/src/app/face-snap/face-snap.component.html
@@ -2,7 +2,7 @@
     <h2>{{ faceSnap.title | uppercase }}</h2>
     <!-- <h2>{{ faceSnap.title | lowercase }}</h2>
     <h2>{{ faceSnap.title | titlecase }}</h2> -->
-  <p>Mis en ligne le {{ faceSnap.createdDate }}</p>
+  <p>Mis en ligne le {{ faceSnap.createdDate | date: 'à HH:mm, le d MMMM yyyy' }}</p>
   <img [src]="faceSnap.imageUrl" [alt]="faceSnap.title" />
   <p>{{ faceSnap.description }}</p>
 
